[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tilemaps/UI_SpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://NPC/PlatformUpgrader.gd" type="Script" id=2]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 2 )

[sub_resource type="Animation" id=4]
resource_name = "FloatingSprite"
length = 6.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("UpgradeSprite:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("UpgradeSprite:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 )
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("UpgradeSprite:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("UpgradeSprite:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="PlatformUpgrader" type="Node2D" groups=["Upgraders"]]
z_index = 2
script = ExtResource( 2 )

[node name="UpgradeSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48 )
frames = ExtResource( 1 )
animation = "Sword"

[node name="Platform" type="AnimatedSprite" parent="."]
position = Vector2( -4.76837e-07, -22 )
scale = Vector2( 1.5, 2.75 )
frames = ExtResource( 1 )
animation = "Platform"
frame = 2
playing = true

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetector"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FloatingSprite = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hint" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_playerDetector_body_exited"]
